[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.31.0",
    "tabulate>=0.10.0",
    "yfinance>=0.2.40",
]
